@@ -1,2 +1,0 @@
-# from the directfb flavor
-debian/install/directfb/usr/lib/*directfb*.so.* usr/lib
