@@ -1,0 +1,2 @@
+# from the directfb flavor
+debian/install/directfb/@LIBDIR@/*directfb*.so.* @LIBDIR@
