@@ -1,12 +1,12 @@
 # from Debian
-debian/update-gdkpixbuf-loaders usr/lib/@SHARED_PKG@
-debian/update-gtk-immodules usr/lib/@SHARED_PKG@
+debian/update-gdkpixbuf-loaders @LIBDIR@/@SHARED_PKG@
+debian/update-gtk-immodules @LIBDIR@/@SHARED_PKG@
 # from the shared flavor
 debian/install/shared/etc/gtk-@APIVER@/im-multipress.conf etc/gtk-@APIVER@
-debian/install/shared/usr/bin/gdk-pixbuf-query-loaders usr/lib/@SHARED_PKG@
-debian/install/shared/usr/bin/gtk-query-immodules-2.0 usr/lib/@SHARED_PKG@
-debian/install/shared/usr/bin/gtk-update-icon-cache usr/lib/@SHARED_PKG@
+debian/install/shared/usr/bin/gdk-pixbuf-query-loaders @LIBDIR@/@SHARED_PKG@
+debian/install/shared/usr/bin/gtk-query-immodules-2.0 @LIBDIR@/@SHARED_PKG@
+debian/install/shared/usr/bin/gtk-update-icon-cache @LIBDIR@/@SHARED_PKG@
 debian/install/shared/@MODULES_BASE_PATH@/loaders/*.so @MODULES_BASE_PATH@/loaders
 debian/install/shared/@MODULES_BASE_PATH@/immodules/*.so @MODULES_BASE_PATH@/immodules
 debian/install/shared/@MODULES_BASE_PATH@/printbackends/*.so @MODULES_BASE_PATH@/printbackends
-debian/install/shared/usr/lib/*.so.* usr/lib
+debian/install/shared/@LIBDIR@/*.so.* @LIBDIR@
