@@ -1,8 +1,8 @@
-usr/lib/@SHARED_PKG@/gdk-pixbuf-query-loaders usr/bin/gdk-pixbuf-query-loaders
-usr/lib/@SHARED_PKG@/gtk-query-immodules-@APIVER@ usr/bin/gtk-query-immodules-@APIVER@
-usr/lib/@SHARED_PKG@/gtk-update-icon-cache usr/bin/gtk-update-icon-cache
-usr/lib/@SHARED_PKG@/update-gtk-immodules usr/sbin/update-gtk-immodules
-usr/lib/@SHARED_PKG@/update-gdkpixbuf-loaders usr/sbin/update-gdkpixbuf-loaders
+@LIBDIR@/@SHARED_PKG@/gdk-pixbuf-query-loaders usr/bin/gdk-pixbuf-query-loaders
+@LIBDIR@/@SHARED_PKG@/gtk-query-immodules-@APIVER@ usr/bin/gtk-query-immodules-@APIVER@
+@LIBDIR@/@SHARED_PKG@/gtk-update-icon-cache usr/bin/gtk-update-icon-cache
+@LIBDIR@/@SHARED_PKG@/update-gtk-immodules usr/sbin/update-gtk-immodules
+@LIBDIR@/@SHARED_PKG@/update-gdkpixbuf-loaders usr/sbin/update-gdkpixbuf-loaders
 usr/share/doc/@COMMON_PKG@/changelog.gz usr/share/doc/@BIN_PKG@/changelog.gz
 usr/share/doc/@COMMON_PKG@/NEWS.gz usr/share/doc/@BIN_PKG@/NEWS.gz
 usr/share/doc/@COMMON_PKG@/README.gz usr/share/doc/@BIN_PKG@/README.gz
