@@ -11,7 +11,7 @@ SHARED_PKG="@SHARED_PKG@"
 TMPFILE=$(mktemp -t "gtk+$APIVER-$VERSION.XXXXXXXXXX")
 
 echo -n "Updating the gdk-pixbuf loaders list for Gtk+ $VERSION..."
-"/usr/lib/$SHARED_PKG/gdk-pixbuf-query-loaders" > $TMPFILE
+"/@LIBDIR@/$SHARED_PKG/gdk-pixbuf-query-loaders" > $TMPFILE
 if [ "x`cat "$TMPFILE" | grep -v '^#'`" = "x" ]; then
     echo "no gdk-pixbuf loader found."
 else
