@@ -12,8 +12,8 @@ SHARED_PKG="@SHARED_PKG@"
 TMPFILE=$(mktemp -t "gtk+$APIVER-$VERSION.XXXXXXXXXX")
 
 echo -n "Updating the IM modules list for Gtk+ $VERSION..."
-"/usr/lib/$SHARED_PKG/gtk-query-immodules-$APIVER" \
-    $(find "/usr/lib/gtk-$APIVER/$GTK_BINARY_VERSION/immodules" -name '*.so') \
+"/@LIBDIR@/$SHARED_PKG/gtk-query-immodules-$APIVER" \
+    $(find "/@LIBDIR@/gtk-$APIVER/$GTK_BINARY_VERSION/immodules" -name '*.so') \
     > "$TMPFILE"
 if [ "x`cat "$TMPFILE" | grep -v '^#'`" = "x" ]; then
     echo "no Gtk+ IM modules found."
